--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,3 +5,102 @@
 a:focus {
   outline: none !important;
 }
+.login{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    min-height: 100vh;
+    margin: auto;
+}
+.form-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-div form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding: 3vh 2vw;
+  border: 1px solid rgba(128, 128, 128, 0.3);
+}
+
+.form-div form .instaLogo {
+  width: 200px;
+  margin: 20px 0;
+}
+
+.form-div form .input {
+  width: 90%;
+  padding: .6rem;
+  border-radius: 8px;
+  border: 1px solid rgba(128, 128, 128, 0.3);
+  margin: 3px;
+}
+
+.login-btn {
+  width: 97%;
+  padding: .4rem;
+  font-weight: 700;
+  background-color: rgb(1, 183, 255);
+  border: none;
+  border-radius: 8px;
+  margin: 8px 0px;
+  color: white;
+}
+
+#or {
+  margin: 20px 0;
+}
+
+#or:before,
+#or:after {
+  content: '------------------------';
+  color: rgba(128, 128, 128, 0.7);
+  margin: 0 10px;
+}
+
+.fb-login {
+  font-weight: 700;
+  font-size: 95%;
+  color: rgb(85, 0, 255);
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
+
+.sign-up {
+  text-align: center;
+  border: 1px solid rgba(128, 128, 128, 0.3);
+  padding: 20px;
+  margin: 10px;
+}
+
+.get-app {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.store {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#play {
+  width: 190px;
+}
+
+#microsoft {
+  width: 135px;
+  border-radius: 8px;
+}
+
+@media only screen and (max-width: 600px) {
+  .login>img{
+    display: none;
+  }
+}
