--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/header.ejs %>
-  <div class="w-full min-h-screen bg-zinc-900 text-white py-5 flex flex-col items-center justify-center">
+<!-- <div class="w-full min-h-screen bg-zinc-900 text-white py-5 flex flex-col items-center justify-center">
     <div class="flex flex-col items-center gap-5 px-4">
       <img class="w-1/2" src="/images/logo.png" alt="">
       <form class="w-full" action="/login" method="post">
@@ -9,5 +9,43 @@
       </form>
       <span>Don't have an account ? <a href="/" class="text-blue-500">Sign Up</a></span>
     </div>
+  </div> -->
+
+<div class="login">
+  <img src="./images/IG.jpeg" alt="" class="phoneImg" />
+  <div class="form-div">
+    <form class="w-full" action="/login" method="post">
+      <img class="instaLogo" src="./images/instaLogo.png" alt="logo" />
+      <input
+        type="text"
+        class="input"
+        placeholder="phone number, username, or email"
+        name="username"
+        required
+      />
+      <input
+        type="password"
+        class="input"
+        placeholder="Password"
+        name="password"
+        required
+      />
+      <button class="login-btn">Log In</button>
+      <p id="or">or</p>
+      <a href="#" class="fb-login"
+        ><i class="bx bxl-facebook-square"></i>Log in with Facebook</a
+      >
+    </form>
+    <div class="sign-up">
+      <p>Don't have an account? <a href="/" class="sign-link">Sign up</a></p>
+    </div>
+    <div class="get-app">
+      <p>Get the app</p>
+      <div class="store">
+        <img id="play" src="./images/playStore.png" alt="" />
+        <img id="microsoft" src="./images/getMicrosoft.png" alt="" />
+      </div>
+    </div>
   </div>
+</div>
 <% include ./partials/footer.ejs %>
