--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <% if(footer){ %>
+  <!-- <div class="flex items-center justify-center min-h-screen max-w-lg mx-auto">
     <div class="footer text-white flex justify-between items-center w-full fixed bottom-0 z-[10] bg-zinc-900 px-10 py-3">
         <a href="/feed"><i class="text-[1.4rem] ri-home-line"></i></a>
         <a href="/search"><i class="text-[1.4rem] ri-search-line"></i></a>
@@ -7,6 +8,62 @@
           <div class="w-6 h-6 bg-zinc-300 rounded-full"></div>
         </a>
       </div>
+    </div> -->
+    <footer class="bg-zinc-950 max-w-lg mx-auto px-3 py-5 ">
+      <div class="flex justify-around items-center">
+        <a href="/feed">
+          <svg aria-label="Home" class="_ab6- cursor-pointer hover:text-gray-400" color="rgb(245, 245, 245)"
+            fill="rgb(245, 245, 245)" height="24" role="img" viewBox="0 0 24 24" width="24">
+            <title>Home</title>
+            <path
+              d="M9.005 16.545a2.997 2.997 0 0 1 2.997-2.997A2.997 2.997 0 0 1 15 16.545V22h7V11.543L12 2 2 11.543V22h7.005Z"
+              fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"></path>
+          </svg>
+        </a>
+        <a href="/search">
+          <svg aria-label="Explore" class="_ab6- cursor-pointer hover:text-gray-400" color="rgb(245, 245, 245)"
+          fill="rgb(245, 245, 245)" height="24" role="img" viewBox="0 0 24 24" width="24">
+          <title>Search</title>
+          <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none" stroke="currentColor"
+            stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+          <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            x1="16.511" x2="22" y1="16.511" y2="22"></line>
+        </svg>
+        </a>
+        <a href="/upload">
+          <svg aria-label="Home" class="x1lliihq x1n2onr6 cursor-pointer hover:text-gray-400" color="rgb(245, 245, 245)"
+          fill="rgb(245, 245, 245)" height="24" role="img" viewBox="0 0 24 24" width="24">
+          <title>Post</title>
+          <path
+            d="M2 12v3.45c0 2.849.698 4.005 1.606 4.944.94.909 2.098 1.608 4.946 1.608h6.896c2.848 0 4.006-.7 4.946-1.608C21.302 19.455 22 18.3 22 15.45V8.552c0-2.849-.698-4.006-1.606-4.945C19.454 2.7 18.296 2 15.448 2H8.552c-2.848 0-4.006.699-4.946 1.607C2.698 4.547 2 5.703 2 8.552Z"
+            fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+          <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            x1="6.545" x2="17.455" y1="12.001" y2="12.001"></line>
+          <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            x1="12.003" x2="12.003" y1="6.545" y2="17.455"></line>
+        </svg>
+        </a>
+        <svg aria-label="Reels" class="_ab6- cursor-pointer hover:text-gray-400" color="rgb(245, 245, 245)"
+          fill="rgb(245, 245, 245)" height="24" role="img" viewBox="0 0 24 24" width="24">
+          <line fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2" x1="2.049" x2="21.95"
+            y1="7.002" y2="7.002"></line>
+          <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            x1="13.504" x2="16.362" y1="2.001" y2="7.002"></line>
+          <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            x1="7.207" x2="10.002" y1="2.11" y2="7.002"></line>
+          <title>Reels</title>
+          <path
+            d="M2 12.001v3.449c0 2.849.698 4.006 1.606 4.945.94.908 2.098 1.607 4.946 1.607h6.896c2.848 0 4.006-.699 4.946-1.607.908-.939 1.606-2.096 1.606-4.945V8.552c0-2.848-.698-4.006-1.606-4.945C19.454 2.699 18.296 2 15.448 2H8.552c-2.848 0-4.006.699-4.946 1.607C2.698 4.546 2 5.704 2 8.552Z"
+            fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+          <path
+            d="M9.763 17.664a.908.908 0 0 1-.454-.787V11.63a.909.909 0 0 1 1.364-.788l4.545 2.624a.909.909 0 0 1 0 1.575l-4.545 2.624a.91.91 0 0 1-.91 0Z"
+            fill-rule="evenodd"></path>
+        </svg>
+        <a href="/profile" target="_blank">
+          <div class="w-6 h-6 bg-zinc-300 rounded-full"></div>
+        </a>
+      </div>
+    </footer>
 <% } %>
 
 <script>
