--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/header.ejs %>
-  <div class="w-full min-h-screen bg-zinc-900 text-white py-5">
+  <div class="max-w-lg mx-auto min-h-screen bg-zinc-900 text-white py-5">
       <div class="nav flex justify-between items-center px-4">
         <h3 class="text-lg"><%= user.username %></h3>
         <div class="icons flex gap-5">
@@ -8,7 +8,7 @@
         </div>
       </div>
       <div class="flex justify-between items-center pl-6 pr-[12vw] mt-8">
-        <div class="w-[19vw] h-[19vw] bg-sky-100 rounded-full overflow-hidden">
+        <div class="w-20 h-20 bg-sky-100 rounded-full overflow-hidden">
           <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profileImage %>" alt="">
         </div>
         <div class="stats flex gap-5 items-center justify-between">
