--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/header.ejs %>
-  <div class="w-full min-h-screen bg-zinc-900 text-white py-5">
+  <div class="max-w-lg mx-auto min-h-screen bg-zinc-900 text-white py-5">
     <div class="flex justify-between items-center px-4">
       <a class="text-sm text-blue-500" href="/profile"><i class="ri-arrow-left-s-line"></i> profile</a>
       <h2 class="leading-none text-sm">Upload Post</h2>
