--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/header.ejs %>
-  <div class="w-full min-h-screen bg-zinc-900 text-white py-5 flex flex-col items-center justify-center">
+  <!-- <div class="w-full min-h-screen bg-zinc-900 text-white py-5 flex flex-col items-center justify-center">
     <div class="flex flex-col items-center gap-5 px-4">
       <img class="w-1/2" src="/images/logo.png" alt="">
       <form class="w-full" action="/register" method="POST">
@@ -10,6 +10,57 @@
         <input class="w-full bg-blue-500 px-3 py-3 rounded-md mt-2" type="submit" value="Make New Account">
       </form>
       <span>Already have an account ? <a href="/login" class="text-blue-500">Log In</a></span>
+    </div>
+  </div> -->
+  <div class="login">
+    <img src="./images/IG.jpeg" alt="" class="phoneImg" />
+    <div class="form-div">
+      <form class="w-full" action="/register" method="POST">
+        <img class="instaLogo" src="./images/instaLogo.png" alt="logo" />
+        <input
+          type="text"
+          class="input"
+          placeholder="username"
+          name="username"
+          required
+        />
+        <input
+          type="email"
+          class="input"
+          placeholder="email"
+          name="email"
+          required
+        />
+        <input
+          type="text"
+          class="input"
+          placeholder="name"
+          name="name"
+          required
+        />
+        <input
+          type="password"
+          class="input"
+          placeholder="Password"
+          name="password"
+          required
+        />
+        <button class="login-btn">Sign Up</button>
+        <p id="or">or</p>
+        <a href="#" class="fb-login"
+          ><i class="bx bxl-facebook-square"></i>Log in with Facebook</a
+        >
+      </form>
+      <div class="sign-up">
+        <p>Already have an account ? <a href="/login" class="sign-link">Log In</a></p>
+      </div>
+      <div class="get-app">
+        <p>Get the app</p>
+        <div class="store">
+          <img id="play" src="./images/playStore.png" alt="" />
+          <img id="microsoft" src="./images/getMicrosoft.png" alt="" />
+        </div>
+      </div>
     </div>
   </div>
 <% include ./partials/footer.ejs %>
