--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,15 +1,6 @@
 <% if(footer){ %>
-  <!-- <div class="flex items-center justify-center min-h-screen max-w-lg mx-auto">
-    <div class="footer text-white flex justify-between items-center w-full fixed bottom-0 z-[10] bg-zinc-900 px-10 py-3">
-        <a href="/feed"><i class="text-[1.4rem] ri-home-line"></i></a>
-        <a href="/search"><i class="text-[1.4rem] ri-search-line"></i></a>
-        <a href="/upload"><i class="text-[1.4rem] ri-add-box-line"></i></a>
-        <a href="/profile">
-          <div class="w-6 h-6 bg-zinc-300 rounded-full"></div>
-        </a>
-      </div>
-    </div> -->
-    <footer class="bg-zinc-950 max-w-lg mx-auto px-3 py-5 ">
+  
+    <footer class="bg-zinc-950 px-3 py-5 sticky bottom-0 border-t-[1px]">
       <div class="flex justify-around items-center">
         <a href="/feed">
           <svg aria-label="Home" class="_ab6- cursor-pointer hover:text-gray-400" color="rgb(245, 245, 245)"
@@ -59,8 +50,10 @@
             d="M9.763 17.664a.908.908 0 0 1-.454-.787V11.63a.909.909 0 0 1 1.364-.788l4.545 2.624a.909.909 0 0 1 0 1.575l-4.545 2.624a.91.91 0 0 1-.91 0Z"
             fill-rule="evenodd"></path>
         </svg>
-        <a href="/profile" target="_blank">
-          <div class="w-6 h-6 bg-zinc-300 rounded-full"></div>
+        <a href="/profile">
+          <div class="w-6 h-6 bg-zinc-300 rounded-full overflow-hidden">
+            
+          </div>
         </a>
       </div>
     </footer>
