--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -6,7 +6,7 @@
       <a class="text-sm" href="/feed"><i class="ri-home-line"></i> home</a>
     </div>
     <div class="flex flex-col items-center gap-2 mt-20">
-      <div class="image w-[25vw] h-[25vw] rounded-full border-2 border-zinc-800 flex items-center justify-center">
+      <div class="image w-24 h-24 rounded-full border-2 border-zinc-800 flex items-center justify-center">
         <i class="text-5xl font-light ri-image-line"></i>
       </div>
       <button id="selectpic" class="text-blue-500 capitalize">select picture</button>
