--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,4 +8,4 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="max-w-lg mx-auto">
